// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DmnForm tests should create a text field and a label 1`] = `
<span
  class="pf-c-form__label-text"
>
  name
</span>
`;

exports[`DmnForm tests should have placeholder 1`] = `
<span
  class="pf-c-select__toggle-text"
>
  Select...
</span>
`;

exports[`DmnForm tests should remove required parameter 1`] = `
<div>
  <div
    data-testid="dmn-form"
  >
    <form
      class="pf-c-form"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="uniforms-0007-0001"
          >
            <span
              class="pf-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            id="uniforms-0007-0001"
            name="name"
            placeholder=""
            type="text"
            value=""
          />
          
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-8"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`DmnForm tests should render the DMN Form 1`] = `
<div
  data-testid="dmn-form"
>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0000-0001"
        >
          <span
            class="pf-c-form__label-text"
          >
            name
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0000-0001"
          name="name"
          placeholder=""
          type="text"
          value="Kogito"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0000-0003"
        >
          <span
            class="pf-c-form__label-text"
          >
            lastName
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0000-0003"
          name="lastName"
          placeholder=""
          type="text"
          value="Tooling"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0000-0005"
        >
          <span
            class="pf-c-form__label-text"
          >
            daysAndTimeDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0000-0005"
          name="daysAndTimeDuration"
          placeholder=""
          type="text"
          value="P1D"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0000-0007"
        >
          <span
            class="pf-c-form__label-text"
          >
            yearsAndMonthDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0000-0007"
          name="yearsAndMonthDuration"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`DmnForm tests should submit the formData 1`] = `
<div
  data-testid="dmn-form"
>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0001-0001"
        >
          <span
            class="pf-c-form__label-text"
          >
            name
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0001-0001"
          name="name"
          placeholder=""
          type="text"
          value="Kogito"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0001-0003"
        >
          <span
            class="pf-c-form__label-text"
          >
            lastName
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0001-0003"
          name="lastName"
          placeholder=""
          type="text"
          value="Tooling"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0001-0005"
        >
          <span
            class="pf-c-form__label-text"
          >
            daysAndTimeDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0001-0005"
          name="daysAndTimeDuration"
          placeholder=""
          type="text"
          value="P1D"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0001-0007"
        >
          <span
            class="pf-c-form__label-text"
          >
            yearsAndMonthDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0001-0007"
          name="yearsAndMonthDuration"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`DmnForm tests should validate the formData - invalid 1`] = `
<div
  data-testid="dmn-form"
>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0004-0001"
        >
          <span
            class="pf-c-form__label-text"
          >
            name
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0004-0001"
          name="name"
          placeholder=""
          type="text"
          value="Kogito"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0004-0003"
        >
          <span
            class="pf-c-form__label-text"
          >
            lastName
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0004-0003"
          name="lastName"
          placeholder=""
          type="text"
          value="Tooling"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0004-0005"
        >
          <span
            class="pf-c-form__label-text"
          >
            daysAndTimeDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0004-0005"
          name="daysAndTimeDuration"
          placeholder=""
          type="text"
          value="p"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0004-0007"
        >
          <span
            class="pf-c-form__label-text"
          >
            yearsAndMonthDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0004-0007"
          name="yearsAndMonthDuration"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-5"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`DmnForm tests should validate the formData - success 1`] = `
<div
  data-testid="dmn-form"
>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0003-0001"
        >
          <span
            class="pf-c-form__label-text"
          >
            name
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0003-0001"
          name="name"
          placeholder=""
          type="text"
          value="Kogito"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0003-0003"
        >
          <span
            class="pf-c-form__label-text"
          >
            lastName
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0003-0003"
          name="lastName"
          placeholder=""
          type="text"
          value="Tooling"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0003-0005"
        >
          <span
            class="pf-c-form__label-text"
          >
            daysAndTimeDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0003-0005"
          name="daysAndTimeDuration"
          placeholder=""
          type="text"
          value="P1D"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0003-0007"
        >
          <span
            class="pf-c-form__label-text"
          >
            yearsAndMonthDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0003-0007"
          name="yearsAndMonthDuration"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-4"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`DmnForm tests shouldn't submit the formData 1`] = `
<div
  data-testid="dmn-form"
>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0002-0001"
        >
          <span
            class="pf-c-form__label-text"
          >
            name
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0002-0001"
          name="name"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0002-0003"
        >
          <span
            class="pf-c-form__label-text"
          >
            lastName
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0002-0003"
          name="lastName"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0002-0005"
        >
          <span
            class="pf-c-form__label-text"
          >
            daysAndTimeDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0002-0005"
          name="daysAndTimeDuration"
          placeholder=""
          type="text"
          value="p"
        />
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="uniforms-0002-0007"
        >
          <span
            class="pf-c-form__label-text"
          >
            yearsAndMonthDuration
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          id="uniforms-0002-0007"
          name="yearsAndMonthDuration"
          placeholder=""
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
